add config to enable fortify